index.css
@media (min-width: 720px) {
    body {
        zoom: 150%;
    }
}

@font-face {
    font-family: Gaegu;
    src: url('./fonts/Gaegu-Regular.ttf') format('truetype');
    src: url('./fonts/Gaegu-Regular.woff') format('woff');
    src: url('./fonts/Gaegu-Regular.woff2') format('woff2');
    font-weight: normal;
}

@font-face {
    font-family: Gaegu;
    src: url('./fonts/Gaegu-Bold.ttf') format('truetype');
    src: url('./fonts/Gaegu-Bold.woff') format('woff');
    src: url('./fonts/Gaegu-Bold.woff2') format('woff2');
    font-weight: bold;
}

@font-face {
    font-family: 'Local Nunito';
    src: url('./fonts/NunitoSans-ExtraLight.ttf') format('truetype');
    src: url('./fonts/NunitoSans-ExtraLight.woff') format('woff');
    src: url('./fonts/NunitoSans-ExtraLight.woff2') format('woff2');
    font-weight: 100;
}

@font-face {
    font-family: 'Local Nunito';
    src: url('./fonts/NunitoSans-ExtraBold.ttf') format('truetype');
    src: url('./fonts/NunitoSans-ExtraBold.woff') format('woff');
    src: url('./fonts/NunitoSans-ExtraBold.woff2') format('woff2');
    font-weight: bolder;
}

:root {
    --super-color: #ffa3a3;
}

body {
    background-color: #fff2d6;
    font-family: 'Nunito Sans';
}

button {
    font-family: inherit;
    font-weight: bold;
    border: none;
}

#main-content {
    position: fixed;
    width: 90%;
    top: 5%;
    left: 5%;
}

h1 {
    font-family: 'Gaegu';
    margin-top: -25px;
    margin-bottom: 0;
    font-size: 80px;
    text-align: center;
    text-shadow: white 0 0 3px;
}

h2 {
    font-family: 'Gaegu';
    margin: -20px 0 0;
    font-size: 18px;
    font-weight: bold;
    text-align: center;
}

h3 {
    font-family: 'Gaegu';
    font-size: 48px;
    font-weight: normal;
    margin: 0;
    text-align: center;
}

#H {
    color: #ff0000;
}

#U {
    color: #ffff00;
    text-shadow: #8080ff 0 0 1px;
}

#E {
    color: #0060ff;
    font-size: 75px;
}

#man {
    color: #6c4b00;
    text-shadow: none;
    font-weight: normal;
}

#cycle {
    margin: 10px auto 0;
    width: max-content;
}

#cycle svg {
    transition-duration: 1s;
    fill: #fff2d6;
}


.buttons {
    display: flex;
}

.buttons button {
    transition-duration: 50ms;
    width: 100px;
    color: white;
    letter-spacing: 0.75px;
    background-color: #6c4b00;
    text-align: center;
    font-size: 14px;
    margin: 10px 0;
    padding: 10px;
    border-radius: 100px;
}

#youtube {
    margin-top: 15px;
}

#youtube div {
    margin: 2px 5px;
    color: white;
}

#youtube svg {
    margin-top: 6px;
}

#youtube path {
    fill: #ff0000;
}

#youtube a button {
    /* width: max-content; */
    /* border-radius: 25px; */
    background-color: #ffffff;
    padding: 0px 5px;
}

#trailer {
    color: #000000;
    margin: 0 2px;
}


#youtube a button>div {
    display: flex;
    align-items: center;
    letter-spacing: 0.5px;
}


#youtube a button:hover {
    transition-duration: 50ms;
    box-shadow: #00000040 0 1px 1px;
}

#youtube a button:active {
    transition-duration: 50ms;
    background-color: #fff0f0;
}

.buttons a button:hover {
    transition-duration: 50ms;
    cursor: pointer;
    background-color: #805900;
    box-shadow: #000000c0 0 1px 1px;
}

.buttons a button:active {
    transition-duration: 50ms;
    background-color: #6c4b00;
    transform: translateY(2px);
}

#tips button {
    margin-top: 25px;
    background-color: #ffffff;
    color: #8000ff;
    padding: 8px;
    letter-spacing: 0.5px;
}

#tips button:hover {
    transition-duration: 150ms;
    background-color: #f8f0ff;
    box-shadow: #00000040 0 1px 1px;
}

#tips button:active {
    transition-duration: 50ms;
    background-color: #eeddff;
}

.spacer {
    flex: 100%;
}

.mid-spacer {
    flex: 10%;
}

a {
    text-decoration: none;
}

.open-source {
    transition: 150ms;
    width: 250px;
    position: fixed;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    padding: 10px;
    border-radius: 25px 25px 0px 0px;
    font-family: 'Gaegu';
    font-size: 20px;
    letter-spacing: 3px;
    background-color: #80fff8;
}

.open-source:hover {
    transition: 150ms;
    padding-bottom: 20px;
    cursor: pointer;
}

.open-source:active {
    transition: 150ms;
    padding-bottom: 15px;
    cursor: pointer;
}

#super {
    display: none;
    font-family: 'Local Nunito';
    color: #ffffff;
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translateX(-50%) translateY(-50%);
    border: 2px solid var(--super-color);
    width: 270px;
    height: 375px;
}

#super h1 {
    font-family: 'Local Nunito';
    font-weight: 100;
    font-size: 28px;
    text-shadow: none;
    margin: 25px 0 0;
}

#HUE {
    color: var(--super-color);
    font-size: 0.72em;
    font-weight: bolder;
}

#super h5 {
    margin: 0 0 20px;
    text-align: center;
    font-weight: 100;
}

#super div {
    padding: 10px 0;
    width: max-content;
    margin: auto;
}

#super button {
    transition-duration: 100ms;
    border: none;
    width: 108px;
    border-radius: 100px;
    background-color: var(--super-color);
    color: #121212;
}

#super button:hover {
    transition-duration: 100ms;
    cursor: pointer;
    color: #000000;
    box-shadow: #000000ff 0 1px 10px;
}

#super button:active {
    transition-duration: 1s;
    background-color: #ffffff;
    cursor: pointer;
}

#super button p {
    margin: 5px 0;
    font-size: 16px;
    transform: scaleX(0.95);
}

#github {
    margin-top: 25px !important;
}

#overlay {
    position: absolute;
    min-width: 100%;
    height: 92%;
    top: 0px;
    left: 0;
    background-color: #121212;
    transition: background-color 1.5s linear;
}

